--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <meta name="google-site-verification" content="b4YMomL0ZmniROBALqmQF1lqjg2R4uwoy_DjJWr47YY" />
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/rust-wiiu/.github/a8715ab7f07cdbab4123ad781cb3eebd8b470616/logo/svg/Logo.svg">
 </head>
 <body>
   <header class="site-header">
