--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
   --primary-color: #2563eb;
   --text-color: #111827;
   --light-text-color: #4b5563;
-  --background-color: #ffffff;
+  --background-color: #be4545;
   --light-background: #f9fafb;
   --border-color: #e5e7eb;
 }
